tests/baselines/reference/destructuringTypeAssertionsES5_1(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
destructuringTypeAssertionsES5_1.ts(1,18): error TS2304: Cannot find name 'foo'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== destructuringTypeAssertionsES5_1.ts (1 errors) ====
    var { x } = <any>foo();
                     ~~~
!!! error TS2304: Cannot find name 'foo'.